src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__real_mainnet_asset_freeze.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"                   TYP   E4A...HY   ZJU...QQ                          "
"                   ──────────┬──────────┬───                          "
"                             │          │                             "
"                     AFZ     ●──────────▶    freeze                   "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
