src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__real_mainnet_asset_freeze_recent.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"                   TYP   PIJ...3U   PT4...AE                          "
"                   ──────────┬──────────┬───                          "
"                             │          │                             "
"                     AFZ     ●──────────▶    freeze                   "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
