src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__real_mainnet_asset_opt_in.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"                       TYP   SMO...KU                       "
"                       ──────────┬───                       "
"                                 │                          "
"                         AXF  ↺opt-i…                       "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
