src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__real_mainnet_asset_transfer.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"                        TYP   6MO...JM   OCD...FA                               "
"                        ──────────┬──────────┬───                               "
"                                  │          │                                  "
"                          AXF     ●──────────▶    300000                        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
