src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__real_mainnet_keyreg.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"                       TYP   65N...NI                       "
"                       ──────────┬───                       "
"                                 │                          "
"                         KEY  ◉keyreg                       "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
