src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__real_mainnet_keyreg_online.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"                                ①                           "
"                       TYP   HYD...EE                       "
"                             Account                        "
"                       ──────────┬───                       "
"                                 │                          "
"                         KEY  ◉keyreg                       "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
