src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__real_mainnet_payment.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"                       TYP   M3I...XM   KIZ...BQ                                "
"                       ──────────┬──────────┬───                                "
"                                 │          │                                   "
"                         PAY     ●──────────▶    236.07A                        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
