src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__real_mainnet_payment_close_remainder.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"                                          ①                                     "
"                                 TYP   TDV...HM                                 "
"                                       Account                                  "
"                                 ──────────┬───                                 "
"                                           │                                    "
"                                   PAY    ↺0A                                   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
