src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__real_mainnet_payment_close_remainder_recent.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"                          TYP   SVZ...E4   GW3...IA                             "
"                          ──────────┬──────────┬───                             "
"                                    │          │                                "
"                            PAY     ●──────────▶    0A                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
