src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__real_testnet_asset_clawback.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"                                   ①          ②                                 "
"                          TYP   ATJ...GY   ATS...JE                             "
"                                Account    Account                              "
"                          ──────────┬──────────┬───                             "
"                                    │          │                                "
"                            AXF     ●──────────▶    5                           "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
