src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__real_testnet_rekey.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"                           TYP   WK3...TM   QUA...SA                            "
"                           ──────────┬──────────┬───                            "
"                                     │          │                               "
"                             PAY    ↺0A         │                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
