src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__transaction_group.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"                      ①          ②                          "
"             TYP   SEN...4A   REC...TU                      "
"                   Account    Account                       "
"             ──────────┬──────────┬───                      "
"                       │          │                         "
"               PAY     ●──────────▶    5.00A                "
"               AXF     ◀──────────●    1000000              "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
